<resources>
    <string name="app_name">Imagic</string>
    <!-- Custom resources -->
    <string name="hello_histogram">Hello Histogram!</string>
    <string name="hello_contrast_enhancement">Hello Contrast Enhancement!</string>
    <string name="hello_equalizer">Hello Equalizer!</string>
    <string name="hello_ocr">Hello OCR!</string>
    <string name="histogram_image_view_content_description">Histogram Image View</string>
    <string name="contrast_image_view_content_description">Contrast Image View</string>
    <string name="contrast_transformed_image_view_content_description">Contrast Transformed Image View</string>
    <string name="equalizer_image_view_content_description">Equalizer Image View</string>
    <string name="equalizer_transformed_image_view_content_description">Equalizer Transformed Image View</string>
    <string name="special_effects_image_view_content_description">Special Effects Image View</string>
    <string name="special_effects_transformed_image_view_content_description">Special Effects Transformed Image View</string>
    <string name="graph_view_empty_series_data">0=0</string>
    <string name="image_dialog_cancel_button">Cancel</string>
    <string name="select_image_button_text">Select From\nGallery\n</string>
    <string name="capture_image_button_text">Capture Using\nCamera\n</string>
    <string name="help_text">\nWelcome to Imagic!\n\nSelect or capture image by clicking\nthe picture above.</string>
    <string name="reset_button_text">Reset Image</string>
    <string name="apply_button_text">Apply Changes</string>
    <string name="red_seek_bar_text">R</string>
    <string name="seek_bar_100_percent_text">100%</string>
    <string name="green_seek_bar_text">G</string>
    <string name="blue_seek_bar_text">B</string>
    <string name="enhance_button_text">Enhance</string>
    <string name="spinner_down_arrow_content_description">Spinner Down Arrow</string>
    <string name="before_transformation_text">Before transformation</string>
    <string name="after_transformation_text">After transformation</string>
    <string name="equalizer_user_histogram_text">User Defined Histogram</string>
    <string name="match_button_text">Match</string>
    <string name="color_seek_bar_text">Color</string>
    <string name="seek_bar_0_text">0</string>
    <string name="frequency_seek_bar_text">Frequency</string>
    <string name="seek_bar_100_text">100</string>
    <string name="apply_effect_button_text">Apply Effect</string>
    <string name="analyze_button_text">Analyze</string>
    <string name="ocr_seek_bar_text">Black Threshold</string>
    <string name="threshold_less_equal_seek_bar_128_text">127 or lower</string>
    <string name="result_text">Result :</string>
    <string name="edit_text_1_text">1</string>
    <string name="custom_kernel_text">Custom Kernel</string>
    <string name="face_recognition_transformed_image_view_content_description">Face Recognition Transformed Image View</string>
    <string name="face_recognition_image_view_content_description">Face Recognition Image View</string>
    <string name="extract_face_button_text">Extract Face!</string>
    <string name="detect_face_button_text">Detect Face!</string>
    <string name="this_face_text">This Face is...</string>
</resources>
