<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OCRFragment">

    <ProgressBar
        android:id="@+id/ocrProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:maxHeight="@dimen/progress_bar_max_height"
        android:minHeight="@dimen/progress_bar_min_height"
        android:progress="0"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/scrollable_linear_layout_bottom_padding"
            android:paddingEnd="@dimen/scrollable_linear_layout_side_padding"
            android:paddingStart="@dimen/scrollable_linear_layout_side_padding"
            android:paddingTop="@dimen/scrollable_linear_layout_top_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/ocrImageView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/image_view_layout_height"
                    android:layout_marginEnd="@dimen/double_image_view_side_margin"
                    android:layout_marginStart="@dimen/double_image_view_side_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/special_effects_image_view_content_description"
                    android:src="@drawable/ic_mountain" />

                <ImageView
                    android:id="@+id/ocrTransformedImageView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/image_view_layout_height"
                    android:layout_marginEnd="@dimen/double_image_view_side_margin"
                    android:layout_marginStart="@dimen/double_image_view_side_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/special_effects_transformed_image_view_content_description"
                    android:src="@drawable/ic_mountain"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/ocrHelpTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/help_text" />

            <LinearLayout
                android:id="@+id/ocrContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reset_apply_button_space_gap" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/ocrResetButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/reset_apply_button_side_margin"
                        android:layout_marginStart="@dimen/reset_apply_button_side_margin"
                        android:layout_weight="1"
                        android:background="@drawable/reset_button"
                        android:gravity="center_vertical|center_horizontal"
                        android:paddingEnd="@dimen/reset_apply_button_side_padding"
                        android:paddingStart="@dimen/reset_apply_button_side_padding"
                        android:text="@string/reset_button_text"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/ocrApplyButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/reset_apply_button_side_margin"
                        android:layout_marginStart="@dimen/reset_apply_button_side_margin"
                        android:layout_weight="1"
                        android:background="@drawable/apply_button"
                        android:gravity="center_vertical|center_horizontal"
                        android:paddingEnd="@dimen/reset_apply_button_side_padding"
                        android:paddingStart="@dimen/reset_apply_button_side_padding"
                        android:text="@string/apply_button_text"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reset_apply_button_space_gap" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/ocr_seek_bar_text" />

                    <SeekBar
                        android:id="@+id/ocrThresholdSeekBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:max="254"
                        android:progress="127" />

                    <TextView
                        android:id="@+id/ocrThresholdTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/threshold_less_equal_seek_bar_128_text" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ocr_spinner_analyze_button_space_gap" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:id="@+id/ocrSpinnerContainer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spinner_relative_layout_action_button_side_margin"
                        android:layout_marginStart="@dimen/spinner_relative_layout_action_button_side_margin"
                        android:layout_weight="1"
                        android:background="@drawable/spinner">

                        <Spinner
                            android:id="@+id/ocrSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:popupBackground="@android:color/holo_orange_dark" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/arrow_down_float_side_margin"
                            android:layout_marginStart="@dimen/arrow_down_float_side_margin"
                            android:contentDescription="@string/spinner_down_arrow_content_description"
                            android:src="@drawable/ic_down_arrow" />
                    </RelativeLayout>

                    <Button
                        android:id="@+id/ocrAnalyzeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spinner_relative_layout_action_button_side_margin"
                        android:layout_marginStart="@dimen/spinner_relative_layout_action_button_side_margin"
                        android:layout_weight="1"
                        android:background="@drawable/primary_action_button"
                        android:text="@string/analyze_button_text"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/ocr_result_space_gap" />

            <LinearLayout
                android:id="@+id/ocrResultContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/result_text"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ocr_result_text_view_space_gap" />

                <TextView
                    android:id="@+id/ocrResultTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>